<?xml version="1.0"?>
<package>
  <name>ble_client_msgs</name>
  <version>0.1.0</version>
  <description>The ble_client_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="christian.hirsch@tuwien.ac.at">Christian Hirsch</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
